# bloomfwd

./: README.md
baseline/: .gitignore
baseline/bench/: cpu_falsep.sh  cpu_rand.sh  mic_falsep_local.sh  mic_rand.sh  mratio.sh  parallel_threads.sh  ripe.sh
baseline/src/: CMakeLists.txt  bloomfwd_opt.c  bloomfwd_opt.c.bkp  bloomfwd_opt.h  config.h  hashfunctions.h  main_opt.c  prettyprint.c
bloomfwd-v4/: .lvimrc  CMakeLists.txt
bloomfwd-v4-coop/bench/: cpu.sh  cpu_falsep.sh  def_route.sh  def_route_mic.sh  def_route_opt.sh  def_route_opt_mic.sh  mic.sh  mic_falsep.sh  mic_falsep_local.sh  mic_opt.sh  offload.sh  parallel_sched_chunk.sh  serial.sh
bloomfwd-v4-coop/src/: CMakeLists.txt  bloomfwd_opt.c  bloomfwd_opt.h  config.h  hashfunctions.h  main_opt.c  prettyprint.h
bloomfwd-v4/bench/: caida.sh  cpu.sh  cpu_opt.sh  mic.sh  mic_falsep.sh  mic_opt.sh  ripe.sh  routeviews.sh
bloomfwd-v4/src/: CMakeLists.txt  bloomfwd_opt.c  bloomfwd_opt.h  config.h  hashfunctions.h  main_opt.c
bloomfwd-v6/: CMakeLists.txt
bloomfwd-v6/bench/: cpe.sh  go.sh
bloomfwd-v6/src/: CMakeLists.txt  bloomfwd_opt.c  bloomfwd_opt.h  config.h  hashfunctions.h  main.c  prettyprint.c  prettyprint.h  test.c  uint128.h
ip-helpers/: CiscoFmtParser.hs  IPv6LookupOpt.hs  IPv6Util.hs  MatchingAddrs.hs  README.md  RandomIPGen.hs  cpe.c  cpe_v6.c  ipgen.c  ipgen_v6.c  ipstat.c  ipstat_v6.c
miht-v4/bench/: caida.sh  mic.sh  ripe.sh  routeviews.sh
miht-v6/bench/: cpe.sh
